fix: fixed bug when generateClassNameList is not provided and misalignment on predictors template for call to action.

--- a/main.css
+++ b/main.css
@@ -46,8 +46,8 @@ article:not(.world-in-portrait-ArticleTemplate--container) .ArticleTemplate--app
 }
 
 .app-cta {
-  margin: 70px 7.5%;
-  padding: 30px 0;
+  margin: 70px 7.5% 0 7.5%;
+  padding: 30px 0 70px 30px;
   max-width: 1090px;
   line-height: 0;
 }
